--- a/dobrze.html
+++ b/dobrze.html
@@ -22,7 +22,7 @@
                 <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"> 
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>                     
                 </svg>                 
-            </button>             <a class="header-link" href="index.html"> <h1 style="">GDAŃSKI <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/> REPORTER</h1> </a> 
+            </button>             <a class="header-link" href="index.html"> <h1 style="">GDAŃSKI <img alt="Logo Danziger Report" src="images/danzigerschwan.jpg"/> REPORTER</h1> </a> 
         </header>         
         <nav class="main-nav"> 
             <ul> 
@@ -59,17 +59,13 @@
                 </li>                 
                 <li> <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>                 
-                <li>
-                    <a href="lm.html">LUMEN MUNDI</a>
+                <li><a href="lm.html">LUMEN MUNDI</a>
                 </li>                 
-                <li>
-                    <a href="west.html">Z ZACHODU</a>
+                <li><a href="west.html">Z ZACHODU</a>
                 </li>                 
-                <li>
-                    <a href="fin.html">GDAŃSKI PORTFEL</a>
+                <li><a href="fin.html">GDAŃSKI PORTFEL</a>
                 </li>                 
-                <li>
-                    <a href="pixel.html">PIXEL & PLOT: SPRAWDZIMY TO?</a>
+                <li><a href="pixel.html">PIXEL & PLOT: SPRAWDZIMY TO?</a>
                 </li>                 
             </ul>             
         </div>         
@@ -149,7 +145,6 @@ Jeśli planujesz dłuższy wypad – sprawdź też noclegi w okolicach Wieżycy 
         </div>         
         <footer> 
 </footer>         
-        
         <script src="js/cookie-bar_smart.js"></script>
         <script>
     // Offcanvas menu script
