--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </svg>
             </button>
             <a class="header-link" href="index.html"><h1 style="text-transform: uppercase; ">
-     GDAŃSKI <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/>
+     GDAŃSKI <img alt="Logo Danziger Report" src="images/danzigerschwan.jpg"/>
      REPORTER </h1></a>
         </header>
         <nav class="main-nav">
