--- a/lokalnie.html
+++ b/lokalnie.html
@@ -31,7 +31,7 @@
    <a class="header-link" href="index.html">
     <h1 style="">
      GDAŃSKI
-     <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/>
+     <img alt="Logo Danziger Report" src="images/danzigerschwan.jpg"/>
      REPORTER
     </h1>
    </a>
