--- a/st1.html
+++ b/st1.html
@@ -20,7 +20,6 @@
         <link href="https://fonts.googleapis.com/css?family=Abhaya+Libre&amp;display=swap" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC&amp;display=swap" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&amp;family=Playfair+Display:wght@700&amp;family=Oswald:wght@500&amp;display=swap" rel="stylesheet"/>
-        <!-- Existing CSS files -->
         <link href="css/theme.css" rel="stylesheet" type="text/css"/>
         <link href="css/section.css" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=UnifrakturMaguntia&display=swap">
@@ -56,22 +55,6 @@
                 text-decoration: none;
                 font-weight: bold;
             }
-            /* Przywrócenie oryginalnych stylów dla przycisków w article-actions */
-            .article-actions a, .article-actions button {
-                color: inherit; /* Użyj dziedziczonego koloru */
-                text-decoration: none;
-                font-family: inherit; /* Użyj dziedziczonej czcionki */
-                font-weight: inherit; /* Użyj dziedziczonej wagi czcionki */
-                padding: 8px 15px;
-                border: 1px solid #ccc;
-                border-radius: 5px;
-                background-color: #f0f0f0;
-                cursor: pointer;
-                display: inline-block;
-            }
-            .article-actions button {
-                /* Możesz dodać specyficzne style dla przycisków, jeśli są inne niż dla linków */
-            }
         </style>
         <link href="css/cookie-bar.css" rel="stylesheet"/>
     </head>
@@ -86,7 +69,7 @@
 </path>
                 </svg>
             </button><a class="header-link" href="index.html"> <h1 style="">
-     GDAŃSKI <img alt="Logo Danziger Report" src="images/danzigerschwan.jpg"/>
+     GDAŃSKI <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/>
      REPORTER </h1> </a>
         </header>
         <nav class="main-nav">
@@ -173,7 +156,7 @@
                     <p style=""><b>Polak potrafi,  nie będzie Niemiec pluł nam w twarz.</b> 
 Polska nie odstaje od Niemiec w tych doświadczeniach. Na naszych łamach pisaliśmy już w artykule &bdquo;Bruderferajna Wileńska &ndash; Gdyńskie NGO &apos;O&apos;. Kazus prawno-historyczny&rdquo; <a href="#source-2">[2]</a> o prezesie gdyńskiego NGO, które, rzekomo niosąc pomoc, zbierało haracze od cudzoziemców zatrudnionych w projektach finansowanych przez ONZ (UNHCR). Mamy więc do czynienia z tym samym mechanizmem &ndash; wykorzystaniem trudnej sytuacji migrantów i systemów wsparcia do czerpania zysków przez zorganizowane grupy.&nbsp;</p>
                     <p style="">W artykule Frankfurter Allgemeine Zeitung (FAZ) wspomina się o Rumunach i Bułgarach, którzy stali się narzędziem w rękach gangów. W polskiej rzeczywistości ich odpowiednikami są obywatele Ukrainy i Białorusi. O ile tematyka ukraińska w kontekście wyłudzeń dotacji w pewnym stopniu już się spowszedniała, Białorusini stanowią mniej liczną, ale równie podatną na oszustwa grupę. Co do zasady, metody przekrętów są podobne.
-Warto tu przypomnieć o skali oszustw w tzw. programie &bdquo;40 zł+&rdquo; w ramach którego właściciele mieszkań, w zamian za zakwaterowanie i wyżywienie obywateli Ukrainy, otrzymywali od państwa 40 zł za dobę. Jak słusznie zauważono w artykule z FAZ &ndash; im więcej państwo przeznacza dotacji na pomoc dla cudzoziemców, tym bardziej stają się oni atrakcyjni dla oszustów. Państwo, zbyt dobrze zaznajomione z tym problemem, zlikwidowało program na wniosek MSWiA w ramach &bdquo;uszczelnienia&rdquo;.
+Warto tu przypomnieć o skali oszustw w tzw. programie &bdquo;40 zł+&rdquo;, w ramach którego właściciele mieszkań, w zamian za zakwaterowanie i wyżywienie obywateli Ukrainy, otrzymywali od państwa 40 zł za dobę. Jak słusznie zauważono w artykule z FAZ &ndash; im więcej państwo przeznacza dotacji na pomoc dla cudzoziemców, tym bardziej stają się oni atrakcyjni dla oszustów. Państwo, zbyt dobrze zaznajomione z tym problemem, zlikwidowało program na wniosek MSWiA w ramach &bdquo;uszczelnienia&rdquo;.
 Jednak obywatele Ukrainy i Białorusi stają się już mniej atrakcyjni jako &bdquo;narzędzia&rdquo; dla gangów. Wielu z nich ma w Polsce znajomych i krewnych, którzy mieszkają tu od lat i są w stanie pomóc im zgłosić oszustwa do prokuratury, Państwowej Inspekcji Pracy lub innych organów.&nbsp;</p>
                     <p style="">Ostatnio takim &bdquo;dobrym&rdquo; narzędziem stali się obywatele Kolumbii. Początek był niewinny: agencje pracy &bdquo;widma&rdquo; ściągały Kolumbijczyków do Polski, wykorzystując reżim bezwizowy. Nieszczęśni migranci żyli w przekonaniu, że agencja złożyła za nich wniosek o pozwolenie na pracę i pobyt. Na dowód otrzymywali żółty papier z Poczty Polskiej &ndash; zwrotne potwierdzenie odbioru. Oczywiście, żadnych umów ani wniosków agencje te nie składały. Mimo licznych zgłoszeń ze strony organizacji pozarządowych, problem ten pozostaje bezskutecznie ignorowany przez organy państwowe.</p>
                     <p style="">Lokalna prasa pomorska, zajęła się tym tematem tylko raz, kiedy na początku lutego doszło do masowej bójki z udziałem obywateli Kolumbii w Słupsku. Nikogo jednak nie zainteresowało, co tak naprawdę robią oni w Słupsku. &bdquo;O, migranci zarobkowi&rdquo; &ndash; padała prosta odpowiedź. Niestety, w dużej mierze osoby te podpadają pod definicję ofiar handlu ludźmi.
@@ -192,8 +175,8 @@ Zamiast nagłaśniać te masowe oszustwa i demaskować proceder wykorzystywania 
                         <li id="source-5">[5] <a href="https://wpolityce.pl/spoleczenstwo/210075-antyniemiecki-folklor-w-gdansku-niemcom-przeszkadza-rota-wybrzmiewajaca-z-ratuszowej-wiezy" target="_blank">wPolityce – „Antyniemiecki folklor w Gdańsku”</a></li>
                     </ul>
                 </div>
-                <div class="article-actions"><a href="index.html" role="button">
-      Start page </a><a href="comments.html" role="button">
+                <div class="article-actions"><a href="index.html">
+      Start page </a><a href="comments.html">
       Comment </a>
                     <button onclick="navigator.share({url: window.location.href})">
                         Share
