--- a/prawo.html
+++ b/prawo.html
@@ -27,39 +27,31 @@
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z">
 </path>
                 </svg>
-            </button>
-            <a class="header-link" href="index.html"> <h1 style="">
-     GDAŃSKI <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/>
+            </button><a class="header-link" href="index.html"> <h1 style="">
+     GDAŃSKI <img alt="Logo Danziger Report" src="images/danzigerschwan.jpg"/>
      REPORTER </h1> </a>
         </header>
         <nav class="main-nav">
             <ul>
-                <li>
-                    <a href="stand.html" style="">
+                <li><a href="stand.html" style="">
       STANDPUNKT </a>
                 </li>
-                <li>
-                    <a href="prawo.html" style="">
+                <li><a href="prawo.html" style="">
       PRAWO </a>
                 </li>
-                <li>
-                    <a href="lokalnie.html" style="">
+                <li><a href="lokalnie.html" style="">
       LOKALNIE </a>
                 </li>
-                <li>
-                    <a href="dobrze.html" style="">
+                <li><a href="dobrze.html" style="">
       DOBRZE NA DZIŚ </a>
                 </li>
-                <li>
-                    <a href="notpl.html" style="">
+                <li><a href="notpl.html" style="">
       OBYWATELE NIE PL </a>
                 </li>
-                <li>
-                    <a href="kartka.html" style="">
+                <li><a href="kartka.html" style="">
       KARTKA Z HISTORII </a>
                 </li>
-                <li>
-                    <a href="de/chronograf.html" style="">
+                <li><a href="de/chronograf.html" style="">
       DANZIGER CHRONOGRAF </a>
                 </li>
             </ul>
@@ -68,48 +60,37 @@
 </div>
         <div id="offcanvas-menu">
             <ul>
-                <li>
-                    <a href="stand.html">
+                <li><a href="stand.html">
       STANDPUNKT </a>
                 </li>
-                <li>
-                    <a href="prawo.html">
+                <li><a href="prawo.html">
       PRAWO </a>
                 </li>
-                <li>
-                    <a href="lokalnie.html">
+                <li><a href="lokalnie.html">
       LOKALNIE </a>
                 </li>
-                <li>
-                    <a href="dobrze.html">
+                <li><a href="dobrze.html">
       DOBRZE NA DZIŚ </a>
                 </li>
-                <li>
-                    <a href="notpl.html">
+                <li><a href="notpl.html">
       OBYWATELE NIE PL </a>
                 </li>
-                <li>
-                    <a href="kartka.html">
+                <li><a href="kartka.html">
       KARTKA Z HISTORII </a>
                 </li>
-                <li>
-                    <a href="de/chronograf.html">
+                <li><a href="de/chronograf.html">
       DANZIGER CHRONOGRAF </a>
                 </li>
-                <li>
-                    <a href="lm.html">
+                <li><a href="lm.html">
       LUMEN MUNDI </a>
                 </li>
-                <li>
-                    <a href="west.html">
+                <li><a href="west.html">
       Z ZACHODU </a>
                 </li>
-                <li>
-                    <a href="fin.html">
+                <li><a href="fin.html">
       GDAŃSKI PORTFEL </a>
                 </li>
-                <li>
-                    <a href="pixel.html">
+                <li><a href="pixel.html">
       PIXEL &amp; PLOT: SPRAWDZIMY TO? </a>
                 </li>
             </ul>
@@ -153,18 +134,24 @@ Obszar Młodego Miasta i historycznej Stoczni Gdańskiej to kolejna przestrzeń,
                     <p><i>Powyższy artykuł opiera się na publicznie dostępnych informacjach prasowych oraz dokumentach urzędowych. Opisane zdarzenia i decyzje mają charakter informacyjny i nie stanowią porady prawnej ani stanowiska wobec stron opisanych konfliktów</i></p>
                     <p></p>
                 </div>
-                <div class="article-actions"><a href="index.html" role="button" style="font-weight: 400;">
-      Start page </a><a href="comments.html" role="button" style="font-weight: 400;">
-      Comment </a><a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">
-      Share </a><a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">
-      Copy link </a><a href="#" onclick="window.print()" role="button" style="font-weight: 400;">
+                <div class="article-actions">
+                    <a href="index.html" role="button" style="font-weight: 400;">
+      Start page </a>
+                    <a href="comments.html" role="button" style="font-weight: 400;">
+      Comment </a>
+                    <a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">
+      Share </a>
+                    <a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">
+      Copy link </a>
+                    <a href="#" onclick="window.print()" role="button" style="font-weight: 400;">
       Print </a>
                 </div>
                 <div class="section-separator">
 </div>
                 <div class="editorial-info">
                     <p>
-      Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig </p><a class="contact-btn" href="kontakt.html">
+      Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig </p>
+                    <a class="contact-btn" href="kontakt.html">
       Skontaktuj się z nami </a>
                 </div>
             </div>
