--- a/de/chronograf.html
+++ b/de/chronograf.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=UnifrakturMaguntia&display=swap"> 
         <!-- Dodatkowe style dla źródeł, aby wyglądały spójnie -->         
         <style>.article-sources { margin-top: 30px; padding-top: 20px; border-top: 1px solid #ccc; } .article-sources p { font-family: 'Merriweather', serif; font-size: 16px; font-weight: 700; margin-bottom: 10px; } .article-sources ul { list-style-type: none; padding-left: 0; } .article-sources li { margin-bottom: 8px; scroll-margin-top: 20px;  /* Zapewnia, że element nie jest zasłonięty przez nagłówek po kliknięciu linku */ } .article-sources a { color: #007bff; text-decoration: none; } .article-sources a:hover { text-decoration: underline; } .article-body a { color: #007bff; text-decoration: none; font-weight: bold; }</style>         
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old+Standard+TT&display=swap">
     </head>     
     <body> 
         <header> 
@@ -61,17 +62,13 @@
                 </li>                 
                 <li> <a href="chronograf.html">DANZIGER CHRONOGRAF</a> 
                 </li>                 
-                <li>
-                    <a href="../lm.html">LUMEN MUNDI</a> 
+                <li> <a href="../lm.html">LUMEN MUNDI</a> 
                 </li>                 
-                <li>
-                    <a href="../west.html">Z ZACHODU</a> 
+                <li> <a href="../west.html">Z ZACHODU</a> 
                 </li>                 
-                <li>
-                    <a href="../fin.html">GDAŃSKI PORTFEL</a> 
+                <li> <a href="../fin.html">GDAŃSKI PORTFEL</a> 
                 </li>                 
-                <li>
-                    <a href="../pixel.html">PIXEL &amp; PLOT: SPRAWDZIMY TO?</a> 
+                <li> <a href="../pixel.html">PIXEL &amp; PLOT: SPRAWDZIMY TO?</a> 
                 </li>                 
             </ul>             
         </div>         
@@ -87,7 +84,7 @@
 </div>                 
                 <h1 class="article-title" style="">Weiße Giganten in Polen – Columbia nicht Pictures. Wie Sozialbetrug zu einem Mafia-Geschäft wird.</h1> 
                 <p class="lead" style="">In einer deutschen Stadt, in Duisburg, führten die Behörden eine groß angelegte Razzia in einem riesigen Wohnhochhaus, das liebevoll &ldquo;Weißer Riese&rdquo; genannt wird</p> 
-                <p class="author-date">Verfasst von der Redaktion |  Veröffentlicht am: 2. August 2025</p> 
+                <p class="author-date">Verfasst von der Redaktion |  Veröffentlicht am: 4 August 2025</p> 
                 <img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/m2BDmhmM/danzig-rat15.jpgtext=Duży+Obraz+Artykułu"/> 
                 <p class="image-caption">Rathaus von Danzig</p> 
                 <div class="article-body"> 
@@ -103,15 +100,15 @@
                 <div class="article-sources"> 
                     <p>Quellen:</p> 
                     <ul> 
-                        <li id="source-1">[1] <a href="https://www.faz.net/aktuell/politik/inland/sozialbetrug-laesst-sich-nicht-wegsprengen-11867169.html" target="_blank">FAZ – „Sozialbetrug lässt sich nicht wegsprengen”</a>
+                        <li id="source-1">[1] <a href="https://www.faz.net/aktuell/politik/inland/sozialbetrug-laesst-sich-nicht-wegsprengen-11867169.html" target="_blank">FAZ – „Sozialbetrug lässt sich nicht wegsprengen”</a> 
                         </li>                         
-                        <li id="source-2">[2] <a href="https://danziger.report/archiwum/de/richtbrudovum260725.html" target="_blank">Danziger Report – „Richtbrudovum”</a>
+                        <li id="source-2">[2] <a href="https://danziger.report/archiwum/de/richtbrudovum260725.html" target="_blank">Danziger Report – „Richtbrudovum”</a> 
                         </li>                         
-                        <li id="source-3">[3] <a href="https://www.facebook.com/MorawieckiPL/posts/tragiczny-fina%C5%82-bestialskiego-ataku-emigranta-z-wenezueli-na-24-letni%C4%99-klaudi%C4%99-b/1270879174403137" target="_blank">Post M. Morawieckiego (Facebook)</a>
+                        <li id="source-3">[3] <a href="https://www.facebook.com/MorawieckiPL/posts/tragiczny-fina%C5%82-bestialskiego-ataku-emigranta-z-wenezueli-na-24-letni%C4%99-klaudi%C4%99-b/1270879174403137" target="_blank">Post M. Morawieckiego (Facebook)</a> 
                         </li>                         
-                        <li id="source-4">[4] <a href="https://otwarta.org/wielki-przeglad-spotow-wyborczych-pis-2018/" target="_blank">Fundacja Otwarta</a>
+                        <li id="source-4">[4] <a href="https://otwarta.org/wielki-przeglad-spotow-wyborczych-pis-2018/" target="_blank">Fundacja Otwarta</a> 
                         </li>                         
-                        <li id="source-5">[5] <a href="https://wpolityce.pl/polityka/471010-antyniemiecki-folklor-w-gdansku" target="_blank">wPolityce – „Antyniemiecki folklor w Gdańsku”</a>
+                        <li id="source-5">[5] <a href="https://wpolityce.pl/polityka/471010-antyniemiecki-folklor-w-gdansku" target="_blank">wPolityce – „Antyniemiecki folklor w Gdańsku”</a> 
                         </li>                         
                     </ul>                     
                 </div>                 
@@ -120,7 +117,7 @@
                 </div>                 
                 <div class="section-separator"></div>                 
                 <div class="editorial-info"> 
-                    <p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="../kontakt.html">KONTAKT</a> 
+                    <p style="font-family: 'Old Standard TT', serif;"><b>DANZIGER REPORTER. Nebelgasse 12, Niederstadt, Danzig</b></p> <a class="contact-btn" href="../kontakt.html">KONTAKT</a> 
                 </div>                 
             </div>             
             <div class="vertical-strip"></div>             
@@ -137,7 +134,7 @@
 </iframe>                     
                 </div>                 
                 <div class="ads google sidebar-bottom-ad"> 
-                    <p>Reklama Google (na dole sidebara)</p> 
+                    <p>Google (AdSense)</p> 
                 </div>                 
             </aside>             
         </div>         
@@ -148,7 +145,7 @@
 </iframe>                 
             </div>             
             <div class="ads google sidebar-bottom-ad"> 
-                <p>Reklama Google (na dole sidebara)</p> 
+                <p>Google (AdSense)</p> 
             </div>             
         </div>         
         <footer> 
