--- a/kon0001.html
+++ b/kon0001.html
@@ -154,6 +154,10 @@
 </iframe>                     
                 </div>                 
                 <iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>                 
+                <div class="support-newsletter-section"> 
+                    <iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"> 
+</iframe>                     
+                </div>                 
                 <div class="ads google sidebar-bottom-ad"> 
                     <p>Reklama Google (na dole sidebara)</p> 
                 </div>                 
