--- a/de/archiwum/richtbrudovum260725.html
+++ b/de/archiwum/richtbrudovum260725.html
@@ -16,6 +16,7 @@
         <link href="../../css/theme.css" rel="stylesheet" type="text/css"/>
         <link href="../../css/section.css" rel="stylesheet" type="text/css"/>
         <link href="../../css/cookie-bar.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old+Standard+TT&display=swap">
     </head>
     <body>
         <header>
@@ -27,39 +28,31 @@
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z">
 </path>
                 </svg>
-            </button>
-            <a class="header-link" href="../../index.html"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 12px;">
+            </button><a class="header-link" href="../../index.html"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 12px;">
      DANZIGER <img alt="Obraz Logo Danziger Chronograf" <img alt="Logo Danziger Report" src="../../images/danzigerschwan.jpg"/>
      REPORTER </h1> </a>
         </header>
         <nav class="main-nav">
             <ul>
-                <li>
-                    <a href="../../stand.html">
+                <li><a href="../../stand.html">
       STANDPUNKT </a>
                 </li>
-                <li>
-                    <a href="../../prawo.html">
+                <li><a href="../../prawo.html">
       PRAWO </a>
                 </li>
-                <li>
-                    <a href="../../lokalnie.html">
+                <li><a href="../../lokalnie.html">
       LOKALNIE </a>
                 </li>
-                <li style="">
-                    <a href="../../dobrze.html">
+                <li style=""><a href="../../dobrze.html">
       DOBRZE NA DZIŚ </a>
                 </li>
-                <li>
-                    <a href="../../notpl.html">
+                <li><a href="../../notpl.html">
       OBYWATELE NIE PL </a>
                 </li>
-                <li>
-                    <a href="../../kartka.html">
+                <li><a href="../../kartka.html">
       KARTKA Z HISTORII </a>
                 </li>
-                <li>
-                    <a href="../../de/chronograf.html">
+                <li><a href="../../de/chronograf.html">
       DANZIGER CHRONOGRAF </a>
                 </li>
             </ul>
@@ -68,48 +61,37 @@
 </div>
         <div id="offcanvas-menu">
             <ul>
-                <li>
-                    <a href="../../stand.html">
+                <li><a href="../../stand.html">
       STANDPUNKT </a>
                 </li>
-                <li>
-                    <a href="../../prawo.html">
+                <li><a href="../../prawo.html">
       PRAWO </a>
                 </li>
-                <li>
-                    <a href="../../lokalnie.html">
+                <li><a href="../../lokalnie.html">
       LOKALNIE </a>
                 </li>
-                <li>
-                    <a href="../../dobrze.html">
+                <li><a href="../../dobrze.html">
       DOBRZE NA DZIŚ </a>
                 </li>
-                <li>
-                    <a href="../../notpl.html">
+                <li><a href="../../notpl.html">
       OBYWATELE NIE PL </a>
                 </li>
-                <li>
-                    <a href="../../kartka.html">
+                <li><a href="../../kartka.html">
       KARTKA Z HISTORII </a>
                 </li>
-                <li>
-                    <a href="../../de/chronograf.html">
+                <li><a href="../../de/chronograf.html">
       DANZIGER CHRONOGRAF </a>
                 </li>
-                <li>
-                    <a href="../../lm.html">
+                <li><a href="../../lm.html">
       LUMEN MUNDI </a>
                 </li>
-                <li>
-                    <a href="../../west.html">
+                <li><a href="../../west.html">
       Z ZACHODU </a>
                 </li>
-                <li>
-                    <a href="../../fin.html">
+                <li><a href="../../fin.html">
       GDAŃSKI PORTFEL </a>
                 </li>
-                <li>
-                    <a href="../../pixel.html">
+                <li><a href="../../pixel.html">
       PIXEL &amp; PLOT: SPRAWDZIMY TO? </a>
                 </li>
             </ul>
@@ -153,24 +135,17 @@ Ich weiß nicht, wie die &bdquo;Rechtsberatung&ldquo; in der Gdyniaer NGO &apos;
                     <p>
       Google AdSense Ad (End of Article) </p>
                 </div>
-                <div class="article-actions">
-                    <a href="../../index.html" role="button" style="font-weight: 400;">
-      Start page </a>
-                    <a href="../../comments.html" role="button" style="font-weight: 400;">
-      Comment </a>
-                    <a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">
-      Share </a>
-                    <a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">
-      Copy link </a>
-                    <a href="#" onclick="window.print()" role="button" style="font-weight: 400;">
+                <div class="article-actions"><a href="../../index.html" role="button" style="font-weight: 400;">
+      Start page </a><a href="../../comments.html" role="button" style="font-weight: 400;">
+      Comment </a><a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">
+      Share </a><a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">
+      Copy link </a><a href="#" onclick="window.print()" role="button" style="font-weight: 400;">
       Print </a>
                 </div>
                 <div class="section-separator">
 </div>
                 <div class="editorial-info">
-                    <p>
-      Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig </p>
-                    <a class="contact-btn" href="../../kontakt.html">kontakt</a>
+                    <p style="font-family: 'Old Standard TT', serif;"><b>DANZIGER REPORTER. Nebelgasse 12, Niederstadt, Danzig</b></p><a class="contact-btn" href="../../kontakt.html">kontakt</a>
                 </div>
             </div>
             <div class="vertical-strip">
@@ -190,7 +165,7 @@ Ich weiß nicht, wie die &bdquo;Rechtsberatung&ldquo; in der Gdyniaer NGO &apos;
                 </div>
                 <div class="ads google sidebar-bottom-ad">
                     <p>
-      Reklama Google (na dole sidebara) </p>
+       Google (AdSense) </p>
                 </div>
             </aside>
         </div>
