--- a/freesupport.html
+++ b/freesupport.html
@@ -1,169 +1,125 @@
-<!DOCTYPE html>
-<html lang="pl">
-    <head>
-        <meta charset="utf-8"/>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-        <title>Danziger Chronograf – Tytuł Artykułu</title>
-        <meta content="Opis artykułu na stronie sekcji." name="description"/>
-        <link href="https://fonts.googleapis.com" rel="preconnect"/>
-        <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&amp;display=swap" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&amp;display=swap" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&amp;display=swap" rel="stylesheet"/>
-        <link href="css/theme.css" rel="stylesheet" type="text/css"/>
-        <link href="css/section.css" rel="stylesheet" type="text/css"/>
-        <style>
-            .freesupport-container {
-                max-width: 800px;
-                margin: 100px auto;
-                padding: 2rem;
-                background-color: #f5f5f5;
-                border-radius: 12px;
-                box-shadow: 0 0 10px rgba(0,0,0,0.1);
-                text-align: center;
-            }
-            .freesupport-container h1 {
-                font-size: 2rem;
-                margin-bottom: 2rem;
-            }
-            .support-buttons {
-                display: flex;
-                flex-direction: column;
-                gap: 1.5rem;
-            }
-            .support-buttons a {
-                display: inline-block;
-                padding: 1rem 1.5rem;
-                font-size: 1.1rem;
-                text-decoration: none;
-                border-radius: 8px;
-                background-color: #333;
-                color: white;
-                transition: background-color 0.2s ease;
-            }
-            .support-buttons a:hover {
-                background-color: #555;
-            }
-            .support-buttons span {
-                display: block;
-                font-size: 0.9rem;
-                margin-top: 0.2rem;
-                color: #ccc;
-            }
-            @media (min-width: 600px) {
-                .support-buttons {
-                    flex-direction: row;
-                    justify-content: space-around;
-                }
-                .support-buttons a {
-                    width: 30%;
-                }
-            }
-        </style>
-    </head>
-    <body>
-        <header>
-            <button id="menu-toggle">☰</button>
-            <button id="search-toggle">
-                <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-                </svg>
-            </button>             <a class="header-link" href="index.html"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/> REPORTER</h1> </a>
-        </header>
-        <nav class="main-nav">
-            <ul>
-                <li> <a href="stand.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">STANDPUNKT</a>
-                </li>
-                <li> <a href="prawo.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">PRAWO</a>
-                </li>
-                <li> <a href="lokalnie.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">LOKALNIE</a>
-                </li>
-                <li> <a href="dobrze.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DOBRZE NA DZIŚ</a>
-                </li>
-                <li> <a href="notpl.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">OBYWATELE NIE PL</a>
-                </li>
-                <li> <a href="kartka.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">KARTKA Z HISTORII</a>
-                </li>
-                <li> <a href="de/chronograf.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DANZIGER CHRONOGRAF</a>
-                </li>
-            </ul>
-        </nav>
-        <div id="menu-overlay"></div>
-        <div id="offcanvas-menu">
-            <ul>
-                <li> <a href="stand.html">STANDPUNKT</a>
-                </li>
-                <li> <a href="prawo.html">PRAWO</a>
-                </li>
-                <li> <a href="lokalnie.html">LOKALNIE</a>
-                </li>
-                <li> <a href="dobrze.html">DOBRZE NA DZIŚ</a>
-                </li>
-                <li> <a href="notpl.html">OBYWATELE NIE PL</a>
-                </li>
-                <li> <a href="kartka.html">KARTKA Z HISTORII</a>
-                </li>
-                <li> <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a></li>
-                <li><a href="lm.html">LUMEN MUNDI</a></li>
-                <li><a href="west.html">Z ZACHODU</a></li>
-                <li><a href="fin.html">GDAŃSKI PORTFEL</a></li>
-                <li><a href="pixel.html">PIXEL & PLOT: SPRAWDZIMY TO?</a></li>
-            </ul>
-        </div>
-        <div class="mobile-top-gadgets-container">
-            <iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
-</iframe>
-            <iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
-</iframe>
-        </div>
-        <div class="main-layout-wrapper">
-            <div class="main-content">
-                <div class="ads google article-top-ad">
-                    </div>
-                <div class="freesupport-container">
-                    <h1>Wspieraj wolne media / Support Free Press / Freie Medien unterstützen</h1>
-                    <div class="support-buttons">
-                        <a href="https://buycoffee.to/danzig" target="_blank">☕ Buy Coffee<span>Wesprzyj nas jednorazowo</span></a>
-                        <a href="partnerstwo.html" target="_blank">🌍 Bądź partnerem wolnych mediów<span>Sei Partner freier Medien</span></a>
-                        <a href="shop.html" target="_blank">🛒 Sklepik Danzigera<span>Online-Shop in Vorbereitung</span></a>
-                    </div>
-                </div>
-                <div class="section-separator"></div>
-                <div class="editorial-info">
-                    <p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="kontakt.html">Skontaktuj się z nami</a>
-                </div>
-            </div>
-            <div class="vertical-strip"></div>
-            <aside class="sidebar kontener-szary desktop-sidebar">
-                <div class="clock-calendar-row">
-                    <iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
-</iframe>
-                    <iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
-</iframe>
-                </div>
-                <iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>
-                <div class="support-newsletter-section">
-                    <iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
-</iframe>
-                </div>
-                <div class="ads google sidebar-bottom-ad">
-                    <p>Reklama Google (na dole sidebara)</p>
-                </div>
-            </aside>
-        </div>
-        <div class="mobile-bottom-gadgets-container">
-            <iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>
-            <div class="support-newsletter-section">
-                <iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
-</iframe>
-            </div>
-            <div class="ads google sidebar-bottom-ad">
-                <p>Reklama Google (na dole sidebara)</p>
-            </div>
-        </div>
-        <footer>
-</footer>
+<!DOCTYPE html> 
+<html lang="pl"> 
+    <head> 
+        <meta charset="utf-8"/> 
+        <meta content="width=device-width, initial-scale=1.0" name="viewport"/> 
+        <title>Danziger Chronograf – Tytuł Artykułu</title>         
+        <meta content="Opis artykułu na stronie sekcji." name="description"/> 
+        <link href="https://fonts.googleapis.com" rel="preconnect"/> 
+        <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/> 
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet"/> 
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&amp;display=swap" rel="stylesheet"/> 
+        <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&amp;display=swap" rel="stylesheet"/> 
+        <link href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&amp;display=swap" rel="stylesheet"/> 
+        <link href="css/theme.css" rel="stylesheet" type="text/css"/> 
+        <link href="css/section.css" rel="stylesheet" type="text/css"/> 
+        <style>.freesupport-container { max-width: 800px; margin: 100px auto; padding: 2rem; background-color: #f5f5f5; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.1); text-align: center; } .freesupport-container h1 { font-size: 2rem; margin-bottom: 2rem; } .support-buttons { display: flex; flex-direction: column; gap: 1.5rem; } .support-buttons a { display: inline-block; padding: 1rem 1.5rem; font-size: 1.1rem; text-decoration: none; border-radius: 8px; background-color: #333; color: white; transition: background-color 0.2s ease; } .support-buttons a:hover { background-color: #555; } .support-buttons span { display: block; font-size: 0.9rem; margin-top: 0.2rem; color: #ccc; } @media (min-width: 600px) { .support-buttons {  flex-direction: row;  justify-content: space-around; }  .support-buttons a {  width: 30%; } }</style>         
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old+Standard+TT&display=swap">
+    </head>     
+    <body> 
+        <header> 
+            <button id="menu-toggle">☰</button>             
+            <button id="search-toggle"> 
+                <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"> 
+                    <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>                     
+                </svg>                 
+            </button>             <a class="header-link" href="index.html"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/> REPORTER</h1> </a> 
+        </header>         
+        <nav class="main-nav"> 
+            <ul> 
+                <li> <a href="stand.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">STANDPUNKT</a> 
+                </li>                 
+                <li> <a href="prawo.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">PRAWO</a> 
+                </li>                 
+                <li> <a href="lokalnie.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">LOKALNIE</a> 
+                </li>                 
+                <li> <a href="dobrze.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DOBRZE NA DZIŚ</a> 
+                </li>                 
+                <li> <a href="notpl.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">OBYWATELE NIE PL</a> 
+                </li>                 
+                <li> <a href="kartka.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">KARTKA Z HISTORII</a> 
+                </li>                 
+                <li> <a href="de/chronograf.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DANZIGER CHRONOGRAF</a> 
+                </li>                 
+            </ul>             
+        </nav>         
+        <div id="menu-overlay"></div>         
+        <div id="offcanvas-menu"> 
+            <ul> 
+                <li> <a href="stand.html">STANDPUNKT</a> 
+                </li>                 
+                <li> <a href="prawo.html">PRAWO</a> 
+                </li>                 
+                <li> <a href="lokalnie.html">LOKALNIE</a> 
+                </li>                 
+                <li> <a href="dobrze.html">DOBRZE NA DZIŚ</a> 
+                </li>                 
+                <li> <a href="notpl.html">OBYWATELE NIE PL</a> 
+                </li>                 
+                <li> <a href="kartka.html">KARTKA Z HISTORII</a> 
+                </li>                 
+                <li> <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
+                </li>                 
+                <li>
+                    <a href="lm.html">LUMEN MUNDI</a>
+                </li>                 
+                <li>
+                    <a href="west.html">Z ZACHODU</a>
+                </li>                 
+                <li>
+                    <a href="fin.html">GDAŃSKI PORTFEL</a>
+                </li>                 
+                <li>
+                    <a href="pixel.html">PIXEL & PLOT: SPRAWDZIMY TO?</a>
+                </li>                 
+            </ul>             
+        </div>         
+        <div class="mobile-top-gadgets-container"> 
+            <iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock"> 
+</iframe>             
+            <iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar"> 
+</iframe>             
+        </div>         
+        <div class="main-layout-wrapper"> 
+            <div class="main-content"> 
+                <div class="ads google article-top-ad"> 
+</div>                 
+                <div class="freesupport-container"> 
+                    <h1>Wspieraj wolne media / Support Free Press / Freie Medien unterstützen</h1> 
+                    <div class="support-buttons"> <a href="https://buycoffee.to/danzig" target="_blank">☕ Buy Coffee<span>Wesprzyj nas jednorazowo</span></a> <a href="partnerstwo.html" target="_blank">🌍 Bądź partnerem wolnych mediów<span>Sei Partner freier Medien</span></a> <a href="shop.html" target="_blank">🛒 Sklepik Danzigera<span>Online-Shop in Vorbereitung</span></a> 
+                    </div>                     
+                </div>                 
+                <div class="section-separator"></div>                 
+                <div class="editorial-info"> 
+                    <p style="font-family: 'Old Standard TT', serif;"><b>DANZIGER REPORTER. Nebelgasse 12, Niederstadt, Danzig</b></p> <a class="contact-btn" href="kontakt.html">Skontaktuj się z nami</a> 
+                </div>                 
+            </div>             
+            <div class="vertical-strip"></div>             
+            <aside class="sidebar kontener-szary desktop-sidebar"> 
+                <div class="clock-calendar-row"> 
+                    <iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock"> 
+</iframe>                     
+                    <iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar"> 
+</iframe>                     
+                </div>                 
+                <iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>                 
+                <div class="ads google sidebar-bottom-ad"> 
+                    <p>Reklama Google (na dole sidebara)</p> 
+                </div>                 
+            </aside>             
+        </div>         
+        <div class="mobile-bottom-gadgets-container"> 
+            <iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>             
+            <div class="support-newsletter-section"> 
+                <iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"> 
+</iframe>                 
+            </div>             
+            <div class="ads google sidebar-bottom-ad"> 
+                <p>Reklama Google (na dole sidebara)</p> 
+            </div>             
+        </div>         
+        <footer> 
+</footer>         
         <script>
     // Offcanvas menu script
     const toggle = document.getElementById('menu-toggle');
@@ -186,6 +142,6 @@
     }
 
     // Weather Widget Script - REMOVED AS IT'S NOW IN wetter.html
-  </script>
-    </body>
+  </script>         
+    </body>     
 </html>
