--- a/freesupport.html
+++ b/freesupport.html
@@ -91,7 +91,7 @@
                 </div>                 
                 <div class="section-separator"></div>                 
                 <div class="editorial-info"> 
-                    <p style="font-family: 'Old Standard TT', serif;"><b>DANZIGER REPORTER. Nebelgasse 12, Niederstadt, Danzig</b></p> <a class="contact-btn" href="kontakt.html">Skontaktuj się z nami</a> 
+                    <p style="font-family: 'Old Standard TT', serif;"><b>DANZIGER REPORTER. Nebelgasse 12, Niederstadt, Danzig</b></p> <a class="contact-btn" href="kontakt.html">KONTAKT</a> 
                 </div>                 
             </div>             
             <div class="vertical-strip"></div>             
