--- a/de/archiwum/richtbrudovum260725.html
+++ b/de/archiwum/richtbrudovum260725.html
@@ -28,31 +28,39 @@
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z">
 </path>
                 </svg>
-            </button><a class="header-link" href="../../index.html"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 12px;">
+            </button>
+            <a class="header-link" href="../../index.html"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 12px;">
      DANZIGER <img alt="Obraz Logo Danziger Chronograf" <img alt="Logo Danziger Report" src="../../images/danzigerschwan.jpg"/>
      REPORTER </h1> </a>
         </header>
         <nav class="main-nav">
             <ul>
-                <li><a href="../../stand.html">
+                <li>
+                    <a href="../../stand.html">
       STANDPUNKT </a>
                 </li>
-                <li><a href="../../prawo.html">
+                <li>
+                    <a href="../../prawo.html">
       PRAWO </a>
                 </li>
-                <li><a href="../../lokalnie.html">
+                <li>
+                    <a href="../../lokalnie.html">
       LOKALNIE </a>
                 </li>
-                <li style=""><a href="../../dobrze.html">
+                <li style="">
+                    <a href="../../dobrze.html">
       DOBRZE NA DZIŚ </a>
                 </li>
-                <li><a href="../../notpl.html">
+                <li>
+                    <a href="../../notpl.html">
       OBYWATELE NIE PL </a>
                 </li>
-                <li><a href="../../kartka.html">
+                <li>
+                    <a href="../../kartka.html">
       KARTKA Z HISTORII </a>
                 </li>
-                <li><a href="../../de/chronograf.html">
+                <li>
+                    <a href="../../de/chronograf.html">
       DANZIGER CHRONOGRAF </a>
                 </li>
             </ul>
@@ -61,37 +69,48 @@
 </div>
         <div id="offcanvas-menu">
             <ul>
-                <li><a href="../../stand.html">
+                <li>
+                    <a href="../../stand.html">
       STANDPUNKT </a>
                 </li>
-                <li><a href="../../prawo.html">
+                <li>
+                    <a href="../../prawo.html">
       PRAWO </a>
                 </li>
-                <li><a href="../../lokalnie.html">
+                <li>
+                    <a href="../../lokalnie.html">
       LOKALNIE </a>
                 </li>
-                <li><a href="../../dobrze.html">
+                <li>
+                    <a href="../../dobrze.html">
       DOBRZE NA DZIŚ </a>
                 </li>
-                <li><a href="../../notpl.html">
+                <li>
+                    <a href="../../notpl.html">
       OBYWATELE NIE PL </a>
                 </li>
-                <li><a href="../../kartka.html">
+                <li>
+                    <a href="../../kartka.html">
       KARTKA Z HISTORII </a>
                 </li>
-                <li><a href="../../de/chronograf.html">
+                <li>
+                    <a href="../../de/chronograf.html">
       DANZIGER CHRONOGRAF </a>
                 </li>
-                <li><a href="../../lm.html">
+                <li>
+                    <a href="../../lm.html">
       LUMEN MUNDI </a>
                 </li>
-                <li><a href="../../west.html">
+                <li>
+                    <a href="../../west.html">
       Z ZACHODU </a>
                 </li>
-                <li><a href="../../fin.html">
+                <li>
+                    <a href="../../fin.html">
       GDAŃSKI PORTFEL </a>
                 </li>
-                <li><a href="../../pixel.html">
+                <li>
+                    <a href="../../pixel.html">
       PIXEL &amp; PLOT: SPRAWDZIMY TO? </a>
                 </li>
             </ul>
@@ -113,8 +132,8 @@
                 <p class="image-caption">Ilustrowany Kuryer Codzienny&ldquo; &ndash; Fotos von Dieben, die Häuser mit ihrem Geheimcode markierten: Zwei sich überschneidende Vierecke bedeuteten &sbquo;Diese Wohnung nicht ausrauben</p>
                 <div class="article-body">
                     <p style=""><b>Zunächst möchte ich der Autorin des Buches &bdquo;Bruderferajn&ldquo; herzlich für die tiefgründige Analyse eines der dunkelsten Kapitel in der Geschichte der Zweiten Polnischen Republik danken</b>. Das Buch zieht den Leser in eine Welt aus Mafia, Erpressung und illegalen Praktiken. Es ist äußerst wertvoll, solche Probleme zu erkennen, die, obwohl historisch verwurzelt, in modernen Formen fortbestehen können. Beim Schreiben über solche Themen sollte man sich bewusst sein, dass &bdquo;Mafia-Technologien&ldquo;, die im Buch so hervorragend beschrieben sind, in der heutigen Praxis von Bürgern mit zweifelhafter Ehrlichkeit angewendet werden könnten. Dies gilt selbst dann, wenn ein solcher Bürger der Präsident der Gdyniaer NGO &apos;O&apos; ist, die kostenlose Rechtsberatungsdienste anbietet.&nbsp;Ich befürchte, ich bin nicht der Einzige, der dieses Buch mit Begeisterung gelesen hat. Es ist sehr wahrscheinlich, dass auch der Präsident der besagten NGO es mit Notizblock und Bleistift in der Hand gelesen und vor sich hin gemurmelt hat: &bdquo;Hmm... OK.&ldquo;. Ich habe keine Beweise dafür, aber ich schließe nicht aus, dass wir es im selben Empik-Laden in der Świętojańska-Straße in Gdynia gekauft haben. Wie Klenczon in &bdquo;Port&ldquo; sang: &bdquo;Die Welt ist klein.&ldquo; Die Autorin des Buches, der Herr Präsident und ich &ndash; wir alle leben in demselben Hafen, in derselben kleinen Welt.</p>
-                    <p style=""><b>Bruderferajn &ndash; illegale Tätigkeit, aber freiwillige Beiträge.</b>Der Bruderferajn operierte im Rahmen krimineller Aktivitäten. Er verstieß gegen die Bestimmungen des Strafgesetzbuches der Zweiten Polnischen Republik (II RP), unter anderem gegen:
-&bull;	Art. 210 KK II RP (Erpressung): &bdquo;Wer eine andere Person mit Gewalt oder widerrechtlicher Drohung zu einer Tat zwingt, die für sie rechtliche Konsequenzen hätte, wird bestraft.&ldquo; 
+                    <p style=""><b>Bruderferajn &ndash; illegale Tätigkeit, aber freiwillige Beiträge</b>.&nbsp;Der Bruderferajn operierte im Rahmen krimineller Aktivitäten. Er verstieß gegen die Bestimmungen des Strafgesetzbuches der Zweiten Polnischen Republik (poln. Kodeks Karny &ndash; KK), unter anderem gegen:
+&bull; Art. 210 KK II RP (Erpressung)<b>:</b>&bdquo;Wer eine andere Person mit Gewalt oder widerrechtlicher Drohung zu einer Tat zwingt, die für sie rechtliche Konsequenzen hätte, wird bestraft.&ldquo; 
 &bull;	Art. 282 KK II RP (Betrug): &bdquo;Wer eine andere Person durch Betrug über rechtlich relevante Umstände irreführt, um sich einen Vermögensvorteil oder einen anderen Vorteil zu verschaffen, wird bestraft.&ldquo; 
 &bull;	Art. 277 KK II RP (kriminelle Vereinigung): &bdquo;Wer einer kriminellen Vereinigung angehört, wird bestraft.&ldquo; 
 Es ist jedoch erwähnenswert, dass die Beiträge im Bruderferajn freiwillig waren. Ihr Zweck war die gegenseitige Hilfe der Mitglieder bei Arbeitsunfällen, vorübergehenden Gefängnisaufenthalten oder dem unerwarteten Ende ihrer beruflichen Laufbahn. Die Beiträge hatten eine quasi-Versicherungsfunktion und wurden nicht erzwungen. Zwar könnte man einen Verstoß gegen Art. 283 KK II RP (illegale öffentliche Sammlung) vorwerfen, falls die Beiträge für andere als die deklarierten Zwecke erhoben worden wären. In der Praxis hatten sie jedoch den Charakter von Selbsthilfe &ndash; nicht von öffentlichen Sammlungen.&nbsp;</p>
@@ -135,17 +154,23 @@ Ich weiß nicht, wie die &bdquo;Rechtsberatung&ldquo; in der Gdyniaer NGO &apos;
                     <p>
       Google AdSense Ad (End of Article) </p>
                 </div>
-                <div class="article-actions"><a href="../../index.html" role="button" style="font-weight: 400;">
-      Start page </a><a href="../../comments.html" role="button" style="font-weight: 400;">
-      Comment </a><a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">
-      Share </a><a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">
-      Copy link </a><a href="#" onclick="window.print()" role="button" style="font-weight: 400;">
+                <div class="article-actions">
+                    <a href="../../index.html" role="button" style="font-weight: 400;">
+      Start page </a>
+                    <a href="../../comments.html" role="button" style="font-weight: 400;">
+      Comment </a>
+                    <a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">
+      Share </a>
+                    <a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">
+      Copy link </a>
+                    <a href="#" onclick="window.print()" role="button" style="font-weight: 400;">
       Print </a>
                 </div>
                 <div class="section-separator">
 </div>
                 <div class="editorial-info">
-                    <p style="font-family: 'Old Standard TT', serif;"><b>DANZIGER REPORTER. Nebelgasse 12, Niederstadt, Danzig</b></p><a class="contact-btn" href="../../kontakt.html">kontakt</a>
+                    <p style="font-family: 'Old Standard TT', serif;"><b>DANZIGER REPORTER. Nebelgasse 12, Niederstadt, Danzig</b></p>
+                    <a class="contact-btn" href="../../kontakt.html">kontakt</a>
                 </div>
             </div>
             <div class="vertical-strip">
