--- a/partnerstwo.html
+++ b/partnerstwo.html
@@ -1,37 +1,27 @@
-
 <!DOCTYPE html>
-
 <html lang="pl">
-<head>
-<meta charset="utf-8"/>
-<title>Partnerstwo</title>
-<link href="css/theme.css" rel="stylesheet"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<style>
-    .archiwum-container {
-      max-width: 600px;
-      margin: 100px auto;
-      padding: 2rem;
-      background-color: #f5f5f5;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      font-size: 1.1rem;
-      text-align: center;
-    }
-    h1 {
-      text-align: center;
-      font-size: 2rem;
-    }
-  </style>
-</head>
-<body>
-<header>
-<div class="container">
-<h1>Partnerstwo</h1>
-</div>
-</header>
-<main>
-<div class="archiwum-container"><p><strong>PL:</strong> Trwają prace nad uruchomieniem sekcji partnerstwa.</p><p><strong>EN:</strong> Work is underway to launch the partnership section.</p><p><strong>DE:</strong> Die Partnersektion wird derzeit vorbereitet.</p></div>
-</main>
-</body>
+    <head>
+        <meta charset="utf-8"/>
+        <title>Partnerstwo</title>
+        <link href="css/theme.css" rel="stylesheet"/>
+        <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+        <style>.archiwum-container { max-width: 600px; margin: 100px auto; padding: 2rem; background-color: #f5f5f5; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.1); font-size: 1.1rem; text-align: center; } h1 { text-align: center; font-size: 2rem; } a { display: inline-block; margin-top: 20px; text-decoration: none; color: #000; border: 1px solid #000; padding: 10px 20px; font-weight: bold; }</style>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=UnifrakturMaguntia&display=swap">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old+Standard+TT&display=swap">
+    </head>
+    <body>
+        <header style="font-family: 'UnifrakturMaguntia', cursive;">
+            <div class="container">
+                <h1>Partnership/partnersektion</h1>
+            </div>
+        </header>
+        <main>
+            <div class="archiwum-container">
+                <p><strong>PL:</strong> Trwają prace nad uruchomieniem sekcji partnerstwa.</p>
+                <p><strong>EN:</strong> Work is underway to launch the partnership section.</p>
+                <p><strong>DE:</strong> Die Partnersektion wird derzeit vorbereitet.</p>
+                <a href="https://danziger.report/">← Back to homepage</a>
+            </div>
+        </main>
+    </body>
 </html>
