--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/> 
         <meta content="width=device-width, initial-scale=1.0" name="viewport"/> 
         <title> 
-            Danziger Chronograf – Strona Główna
+            GDAŃSKI REPORTER – Strona Główna
 </title>         
         <meta content="GDAŃSKI REPORTER – redakcyjny portal lokalny z historią, poradami i przewodnikiem przez Trójmiasto." name="description"/> 
         <link href="https://fonts.googleapis.com" rel="preconnect"/> 
