--- a/fin.html
+++ b/fin.html
@@ -3,7 +3,7 @@
     <head> 
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <title>Danziger Chronograf – Tytuł Artykułu</title>         
+        <title>GDAŃSKI REPORTER – Złoto wraca na tron</title>         
         <meta name="description" content="Opis artykułu na stronie sekcji."> 
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
