--- a/search_widget_fragment.html
+++ b/search_widget_fragment.html
@@ -12,7 +12,7 @@
     Szukaj w Danziger Reporter
   </h3>
   <form action="https://www.google.com/search" method="get" target="_blank" 
-        onsubmit="this.q.value = 'site:danziger-reporter.pl ' + this.q.value;">
+        onsubmit="this.q.value = 'site:danziger.report ' + this.q.value;">
     <input type="text" name="q" placeholder="Wpisz szukaną frazę..." 
            style="width:100%; padding:6px 8px; border:1px solid #ccc; border-radius:4px; margin-bottom:6px; box-sizing:border-box;">
     <button type="submit" 
