--- a/index.html
+++ b/index.html
@@ -120,14 +120,7 @@ Konflikt na styku prawa.</b> własności i prawa do miasta.
 Trójmiasto, w tym Gdańsk, Gdynia i Sopot, od lat przeżywa intensywny rozwój urbanistyczny. W cieniu nowoczesnych drapaczy chmur i odnawianych historycznych kamienic toczy się cichy, lecz niezwykle istotny spór o duszę miasta. Z jednej strony stoją deweloperzy, dla których prawo własności jest fundamentalną podstawą do maksymalizacji zysków. Z drugiej – mieszkańcy i aktywiści, którzy w imię „prawa do miasta” ... </p><img alt="Obraz Poradnika Prawnego" src="https://i.postimg.cc/8zsFhg68/dev.jpg"/></a>
                 </section>
                 <section class="article" id="lokalnie"> <a href="lokalnie.html"><h2 style="font-weight: bold; font-variant: small-caps; text-transform: uppercase; "> 
-       lokalnie </h2><p style="line-height: 1; "><b> 
-        Festiwal Kina Plenerowego w Sopocie – morze, ekran i leżaki. </b> 
-       W letnie wieczory, kiedy molo pustoszeje z dziennych turystów, a fale zaczynają mówić ciszej, Plac Przyjaciół Sopotu zamienia się w coś więcej niż deptak – w kino pod gołym niebem. Repertuar?
-Kino morskie, podróżnicze i klasyka. Dokumenty o rybakach i opowieści o podróżnikach. W tym tygodniu:
-– poniedziałek: „Atlantyk” (reż. Jan-Willem van Ewijk)
-– środa: „Głosy z głębin” – film archiwalny o kutrach dalekomorskich
-– piątek: „Kronika Bałtycka” – przegląd filmów o Trójmieście z lat 1950–1980
-– sobota: „Pod pokładem” – dramat współczesny z portu Gdynia </p><img alt="Obraz Trójmiasta" src="https://i.postimg.cc/fb2PKfyt/kino809535.jpg"/></a>
+       lokalnie </h2><p style="line-height: 1; ">&bdquo;<b>Lwowski Mozart&rdquo; w Gdańsku: Echa podróży w 20. odsłonie Mozartiany.</b> Tegoroczny, jubileuszowy, 20. Festiwal Mozartiana to więcej niż tylko hołd dla geniuszu Wolfganga Amadeusza Mozarta. To także przypomnienie o mniej znanych, choć równie fascynujących wątkach z historii jego rodziny, które splatają się z losami Gdańska, Lwowa i całej Europy. W cieniu wielkiego festiwalu, na tle którego rozbrzmiewają symfonie i opery geniusza z Salzburga, wyłania się postać jego najmłodszego syna &ndash; Franza Xavera Wolfganga Mozarta.&nbsp;</p><img alt="Obraz Trójmiasta" src="https://i.ibb.co/m596Vdjj/fxmozart-j.jpg"/></a>
                 </section>
                 <section class="article" id="dobrze-na-dzis"> <a href="dobrze.html"><h2 style="font-weight: bold; text-transform: uppercase; "> 
        Dobrze na dziś </h2><p style="line-height: 1; "><b> 
